# cmanage

./: README.md  pyproject.toml
.github/workflows/: ci.yml
cmanage/: __init__.py  emission.py  inbox.py
memory/handoff/: 2026-02-03-142048-cmanage-gate-b-correction-pass.md  2026-02-03-150419-repo-test-scaffolding.md
memory/summary/: 2026-02-03-150729-zephyr-phase-1-gate-b.md  2026-02-05-183220-phase-3-observational-emission-historical-awareness.md
tests/: test_inbox.py
