[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cmanage"
version = "0.1.0"
description = "CManage Phase 1 in-memory action inbox"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["cmanage*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]
pythonpath = ["."]
